--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>บัญชีเงินกู้ ยู่ยี่</title>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -18,7 +19,7 @@
     .container {
       max-width: 850px;
       margin: 3rem auto;
-      background: rgba(255, 245, 248, 0.9);
+      background: rgba(255, 245, 248, 0.75);
       border-radius: 25px;
       padding: 2rem;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -55,6 +56,7 @@
       color: #fff;
       transition: background-color 0.3s ease;
       font-size: 1rem;
+      margin-right: 0.5rem;
     }
     button:hover {
       background-color: #ff6e95;
@@ -80,6 +82,9 @@
     tr:last-child td {
       border-bottom: none;
     }
+    .due-soon {
+      background-color: #fff3cd !important;
+    }
   </style>
 </head>
 <body>
@@ -100,6 +105,7 @@
       <input type="date" id="startDate" required />
 
       <button type="submit">➕ เพิ่มลูกหนี้</button>
+      <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
     </form>
 
     <table id="summaryTable">
@@ -149,8 +155,11 @@
 
         const nextDue = new Date(loan.startDate);
         nextDue.setMonth(nextDue.getMonth() + 1);
+        const daysUntilDue = Math.floor((nextDue - now) / (1000 * 60 * 60 * 24));
 
         const row = document.createElement('tr');
+        if (daysUntilDue <= 3) row.classList.add('due-soon');
+
         row.innerHTML = `
           <td>${loan.name}</td>
           <td>${netPrincipal.toLocaleString()}</td>
@@ -181,20 +190,53 @@
         alert('กรุณากรอกจำนวนที่ถูกต้อง');
         return;
       }
-
       const repayDate = new Date();
       const loanStartDate = new Date(loans[index].startDate);
       const daysUsed = Math.floor((repayDate - loanStartDate) / (1000 * 60 * 60 * 24));
       const netPrincipal = loans[index].principal - getTotalPaid(loans[index]);
       const interestPerDay = (netPrincipal * loans[index].rate / 100) / 30;
       const interestDue = parseFloat((interestPerDay * daysUsed).toFixed(2));
-
       alert(`ยอดดอกเบี้ยสะสมถึงวันนี้ (ก่อนคืน): ${interestDue.toLocaleString()} บาท`);
-
       if (!loans[index].repayments) loans[index].repayments = [];
       loans[index].repayments.push({ amount: parseFloat(amount), date: repayDate.toISOString() });
       localStorage.setItem('loans', JSON.stringify(loans));
       calcSummary();
+    }
+
+    function downloadExcel() {
+      const wb = XLSX.utils.book_new();
+      const wsData = [
+        ['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']
+      ];
+
+      const now = new Date();
+
+      loans.forEach(loan => {
+        const totalPaid = getTotalPaid(loan);
+        const netPrincipal = loan.principal - totalPaid;
+        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+        const accumulated = (interestPerDay * daysPassed).toFixed(2);
+        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
+
+        const nextDue = new Date(loan.startDate);
+        nextDue.setMonth(nextDue.getMonth() + 1);
+
+        wsData.push([
+          loan.name,
+          netPrincipal,
+          loan.rate + '%',
+          formatDate(loan.startDate),
+          `${daysPassed} วัน`,
+          parseFloat(accumulated),
+          parseFloat(nextMonth),
+          formatDate(nextDue.toISOString())
+        ]);
+      });
+
+      const ws = XLSX.utils.aoa_to_sheet(wsData);
+      XLSX.utils.book_append_sheet(wb, ws, 'Loan Summary');
+      XLSX.writeFile(wb, 'loan_summary.xlsx');
     }
 
     form.addEventListener('submit', (e) => {
