--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       border-bottom: none;
     }
     .due-soon {
-      background-color: #fff3cd !important;
+      background-color: #ffcccc !important;
     }
   </style>
 </head>
@@ -94,16 +94,12 @@
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
-
       <label>เงินต้น (บาท)</label>
       <input type="number" id="principal" required />
-
       <label>ดอกเบี้ยต่อเดือน (%)</label>
       <input type="number" id="rate" step="0.01" required />
-
       <label>วันที่เริ่มยืม</label>
       <input type="date" id="startDate" required />
-
       <button type="submit">➕ เพิ่มลูกหนี้</button>
       <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
     </form>
@@ -158,7 +154,10 @@
         const daysUntilDue = Math.floor((nextDue - now) / (1000 * 60 * 60 * 24));
 
         const row = document.createElement('tr');
-        if (daysUntilDue <= 3) row.classList.add('due-soon');
+        if (daysUntilDue <= 5) {
+          row.classList.add('due-soon');
+          alert(`แจ้งเตือน: ${loan.name} ใกล้ครบกำหนดจ่ายดอกเบี้ยในอีก ${daysUntilDue} วัน`);
+        }
 
         row.innerHTML = `
           <td>${loan.name}</td>
@@ -205,10 +204,7 @@
 
     function downloadExcel() {
       const wb = XLSX.utils.book_new();
-      const wsData = [
-        ['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']
-      ];
-
+      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
       const now = new Date();
 
       loans.forEach(loan => {
@@ -218,7 +214,6 @@
         const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
         const accumulated = (interestPerDay * daysPassed).toFixed(2);
         const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-
         const nextDue = new Date(loan.startDate);
         nextDue.setMonth(nextDue.getMonth() + 1);
 
