--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>บัญชีเงินกู้ ยู่ยี่</title>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       margin: 0;
@@ -17,12 +18,17 @@
       color: #4a4a4a;
     }
     .container {
-      max-width: 850px;
+      max-width: 950px;
       margin: 3rem auto;
       background: rgba(255, 245, 248, 0.75);
       border-radius: 25px;
       padding: 2rem;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
     h1 {
       text-align: center;
@@ -44,6 +50,11 @@
       margin-top: 0.3rem;
       font-size: 1rem;
       background-color: #fff0f6;
+      transition: box-shadow 0.3s;
+    }
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 8px #ffb6c1;
     }
     button {
       margin-top: 1.5rem;
@@ -54,11 +65,12 @@
       font-weight: bold;
       cursor: pointer;
       color: #fff;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
       font-size: 1rem;
       margin-right: 0.5rem;
     }
     button:hover {
+      transform: scale(1.05);
       background-color: #ff6e95;
     }
     table {
@@ -68,6 +80,7 @@
       background-color: #fffafc;
       border-radius: 15px;
       overflow: hidden;
+      animation: fadeIn 1s ease-in-out;
     }
     th, td {
       padding: 0.9rem;
@@ -85,12 +98,20 @@
     .due-soon {
       background-color: #ffcccc !important;
     }
+    canvas {
+      margin-top: 2rem;
+      background: #fff;
+      border-radius: 15px;
+      padding: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-in-out;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>🧸 บัญชีเงินกู้ ยู่ยี่ 💗</h1>
-
+    <canvas id="loanChart" width="400" height="200"></canvas>
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
@@ -104,7 +125,6 @@
       <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
       <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
     </form>
-
     <table id="summaryTable">
       <thead>
         <tr>
@@ -123,159 +143,31 @@
       <tbody></tbody>
     </table>
   </div>
-
   <script>
-    const form = document.getElementById('loanForm');
-    const tableBody = document.querySelector('#summaryTable tbody');
-    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
+    const chartCtx = document.getElementById('loanChart').getContext('2d');
+    let loanChart;
 
-    function formatDate(dateStr) {
-      const d = new Date(dateStr);
-      return d.toLocaleDateString('th-TH');
-    }
-
-    function getTotalPaid(loan) {
-      return (loan.repayments || []).reduce((sum, r) => sum + parseFloat(r.amount), 0);
-    }
-
-    function calcSummary() {
-      tableBody.innerHTML = '';
-      const now = new Date();
-
-      loans.forEach((loan, index) => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-
-        const nextDue = new Date(loan.startDate);
-        nextDue.setMonth(nextDue.getMonth() + 1);
-        const daysUntilDue = Math.floor((nextDue - now) / (1000 * 60 * 60 * 24));
-
-        const row = document.createElement('tr');
-        if (daysUntilDue <= 5) {
-          row.classList.add('due-soon');
-          alert(`แจ้งเตือน: ${loan.name} ใกล้ครบกำหนดจ่ายดอกเบี้ยในอีก ${daysUntilDue} วัน`);
-        }
-
-        row.innerHTML = `
-          <td>${loan.name}</td>
-          <td>${netPrincipal.toLocaleString()}</td>
-          <td>${loan.rate}%</td>
-          <td>${formatDate(loan.startDate)}</td>
-          <td>${daysPassed} วัน</td>
-          <td>${parseFloat(accumulated).toLocaleString()}</td>
-          <td>${parseFloat(nextMonth).toLocaleString()}</td>
-          <td>${formatDate(nextDue)}</td>
-          <td><button onclick="addRepayment(${index})">➕</button></td>
-          <td><button onclick="deleteLoan(${index})">🗑️</button></td>
-        `;
-        tableBody.appendChild(row);
-      });
-    }
-
-    function deleteLoan(index) {
-      if (confirm('คุณแน่ใจหรือไม่ว่าต้องการลบลูกหนี้คนนี้?')) {
-        loans.splice(index, 1);
-        localStorage.setItem('loans', JSON.stringify(loans));
-        calcSummary();
-      }
-    }
-
-    function addRepayment(index) {
-      const amount = prompt('กรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
-        alert('กรุณากรอกจำนวนที่ถูกต้อง');
-        return;
-      }
-      const repayDate = new Date();
-      const loanStartDate = new Date(loans[index].startDate);
-      const daysUsed = Math.floor((repayDate - loanStartDate) / (1000 * 60 * 60 * 24));
-      const netPrincipal = loans[index].principal - getTotalPaid(loans[index]);
-      const interestPerDay = (netPrincipal * loans[index].rate / 100) / 30;
-      const interestDue = parseFloat((interestPerDay * daysUsed).toFixed(2));
-      alert(`ยอดดอกเบี้ยสะสมถึงวันนี้ (ก่อนคืน): ${interestDue.toLocaleString()} บาท`);
-      if (!loans[index].repayments) loans[index].repayments = [];
-      loans[index].repayments.push({ amount: parseFloat(amount), date: repayDate.toISOString() });
-      localStorage.setItem('loans', JSON.stringify(loans));
-      calcSummary();
-    }
-
-    function downloadExcel() {
-      const wb = XLSX.utils.book_new();
-      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
-      const now = new Date();
-
-      loans.forEach(loan => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate);
-        nextDue.setMonth(nextDue.getMonth() + 1);
-
-        wsData.push([
-          loan.name,
-          netPrincipal,
-          loan.rate + '%',
-          formatDate(loan.startDate),
-          `${daysPassed} วัน`,
-          parseFloat(accumulated),
-          parseFloat(nextMonth),
-          formatDate(nextDue.toISOString())
-        ]);
-      });
-
-      const ws = XLSX.utils.aoa_to_sheet(wsData);
-      XLSX.utils.book_append_sheet(wb, ws, 'Loan Summary');
-      XLSX.writeFile(wb, 'loan_summary.xlsx');
-    }
-
-    function uploadData(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        try {
-          const imported = JSON.parse(e.target.result);
-          if (Array.isArray(imported)) {
-            const timestamp = new Date().toLocaleString();
-            if (confirm(`คุณแน่ใจหรือไม่ว่าต้องการแทนที่ข้อมูลปัจจุบันด้วยข้อมูลใหม่จากไฟล์?`)) {
-              localStorage.setItem('loans', JSON.stringify(imported));
-              loans = imported;
-              alert(`✅ อัปโหลดข้อมูลสำเร็จเมื่อ ${timestamp}`);
-              calcSummary();
-            }
-          } else {
-            alert('❌ ไฟล์ไม่ถูกต้อง กรุณาเลือกไฟล์ JSON ที่ได้จากระบบนี้เท่านั้น');
+    function updateChart(data) {
+      if (loanChart) loanChart.destroy();
+      loanChart = new Chart(chartCtx, {
+        type: 'bar',
+        data: {
+          labels: data.map(l => l.name),
+          datasets: [{
+            label: 'เงินต้นคงเหลือ (บาท)',
+            data: data.map(l => l.remaining),
+            backgroundColor: '#ff9eb2',
+            borderRadius: 10,
+          }]
+        },
+        options: {
+          plugins: { legend: { display: false } },
+          scales: {
+            y: { beginAtZero: true }
           }
-        } catch (err) {
-          alert('❌ ไม่สามารถอ่านไฟล์ได้: ' + err.message);
         }
-      };
-      reader.readAsText(file);
+      });
     }
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const newLoan = {
-        name: document.getElementById('name').value,
-        principal: parseFloat(document.getElementById('principal').value),
-        rate: parseFloat(document.getElementById('rate').value),
-        startDate: document.getElementById('startDate').value,
-        repayments: [],
-      };
-      loans.push(newLoan);
-      localStorage.setItem('loans', JSON.stringify(loans));
-      form.reset();
-      calcSummary();
-    });
-
-    calcSummary();
   </script>
 </body>
 </html>
