--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       <tbody></tbody>
     </table>
   </div>
+
   <script>
     const chartCtx = document.getElementById('loanChart').getContext('2d');
     let loanChart;
@@ -168,6 +169,159 @@
         }
       });
     }
+
+    const form = document.getElementById('loanForm');
+    const tableBody = document.querySelector('#summaryTable tbody');
+    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
+
+    function formatDate(dateStr) {
+      const d = new Date(dateStr);
+      return d.toLocaleDateString('th-TH');
+    }
+
+    function getTotalPaid(loan) {
+      return (loan.repayments || []).reduce((sum, r) => sum + parseFloat(r.amount), 0);
+    }
+
+    function calcSummary() {
+      tableBody.innerHTML = '';
+      const now = new Date();
+      const chartData = [];
+
+      loans.forEach((loan, index) => {
+        const totalPaid = getTotalPaid(loan);
+        const netPrincipal = loan.principal - totalPaid;
+        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+        const accumulated = (interestPerDay * daysPassed).toFixed(2);
+        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
+        const nextDue = new Date(loan.startDate);
+        nextDue.setMonth(nextDue.getMonth() + 1);
+        const daysUntilDue = Math.floor((nextDue - now) / (1000 * 60 * 60 * 24));
+
+        const row = document.createElement('tr');
+        if (daysUntilDue <= 5) {
+          row.classList.add('due-soon');
+          alert(`แจ้งเตือน: ${loan.name} ใกล้ครบกำหนดในอีก ${daysUntilDue} วัน`);
+        }
+
+        row.innerHTML = `
+          <td>${loan.name}</td>
+          <td>${netPrincipal.toLocaleString()}</td>
+          <td>${loan.rate}%</td>
+          <td>${formatDate(loan.startDate)}</td>
+          <td>${daysPassed} วัน</td>
+          <td>${parseFloat(accumulated).toLocaleString()}</td>
+          <td>${parseFloat(nextMonth).toLocaleString()}</td>
+          <td>${formatDate(nextDue)}</td>
+          <td><button onclick="addRepayment(${index})">➕</button></td>
+          <td><button onclick="deleteLoan(${index})">🗑️</button></td>
+        `;
+        tableBody.appendChild(row);
+
+        chartData.push({ name: loan.name, remaining: netPrincipal });
+      });
+
+      updateChart(chartData);
+    }
+
+    function addRepayment(index) {
+      const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
+        alert('กรุณากรอกจำนวนที่ถูกต้อง');
+        return;
+      }
+
+      const repayDate = new Date();
+      const loanStartDate = new Date(loans[index].startDate);
+      const daysUsed = Math.floor((repayDate - loanStartDate) / (1000 * 60 * 60 * 24));
+      const netPrincipal = loans[index].principal - getTotalPaid(loans[index]);
+      const interestPerDay = (netPrincipal * loans[index].rate / 100) / 30;
+      const interestDue = parseFloat((interestPerDay * daysUsed).toFixed(2));
+      alert(`ดอกเบี้ยสะสมถึงวันนี้: ${interestDue.toLocaleString()} บาท`);
+
+      if (!loans[index].repayments) loans[index].repayments = [];
+      loans[index].repayments.push({ amount: parseFloat(amount), date: repayDate.toISOString() });
+      localStorage.setItem('loans', JSON.stringify(loans));
+      calcSummary();
+    }
+
+    function deleteLoan(index) {
+      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
+        loans.splice(index, 1);
+        localStorage.setItem('loans', JSON.stringify(loans));
+        calcSummary();
+      }
+    }
+
+    function downloadExcel() {
+      const wb = XLSX.utils.book_new();
+      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
+      const now = new Date();
+
+      loans.forEach(loan => {
+        const totalPaid = getTotalPaid(loan);
+        const netPrincipal = loan.principal - totalPaid;
+        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+        const accumulated = (interestPerDay * daysPassed).toFixed(2);
+        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
+        const nextDue = new Date(loan.startDate);
+        nextDue.setMonth(nextDue.getMonth() + 1);
+
+        wsData.push([
+          loan.name,
+          netPrincipal,
+          loan.rate + '%',
+          formatDate(loan.startDate),
+          `${daysPassed} วัน`,
+          parseFloat(accumulated),
+          parseFloat(nextMonth),
+          formatDate(nextDue.toISOString())
+        ]);
+      });
+
+      const ws = XLSX.utils.aoa_to_sheet(wsData);
+      XLSX.utils.book_append_sheet(wb, ws, 'Loan Summary');
+      XLSX.writeFile(wb, 'loan_summary.xlsx');
+    }
+
+    function uploadData(event) {
+      const file = event.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        try {
+          const newData = JSON.parse(e.target.result);
+          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
+          if (!confirm('คุณต้องการแทนที่ข้อมูลเดิมหรือไม่?')) return;
+          loans = newData;
+          localStorage.setItem('loans', JSON.stringify(loans));
+          calcSummary();
+          alert('นำเข้าข้อมูลสำเร็จ');
+        } catch (err) {
+          alert('เกิดข้อผิดพลาดในการอ่านไฟล์: ' + err);
+        }
+      };
+      reader.readAsText(file);
+    }
+
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const newLoan = {
+        name: document.getElementById('name').value,
+        principal: parseFloat(document.getElementById('principal').value),
+        rate: parseFloat(document.getElementById('rate').value),
+        startDate: document.getElementById('startDate').value,
+        repayments: [],
+      };
+      loans.push(newLoan);
+      localStorage.setItem('loans', JSON.stringify(loans));
+      form.reset();
+      calcSummary();
+    });
+
+    calcSummary();
   </script>
 </body>
 </html>
