--- a/index.html
+++ b/index.html
@@ -106,12 +106,17 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       animation: fadeIn 1s ease-in-out;
     }
+    tfoot td {
+      background-color: #fff5f8;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>🧸 บัญชีเงินกู้ ยู่ยี่ 💗</h1>
     <canvas id="loanChart" width="400" height="200"></canvas>
+
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
@@ -125,6 +130,7 @@
       <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
       <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
     </form>
+
     <table id="summaryTable">
       <thead>
         <tr>
@@ -141,12 +147,18 @@
         </tr>
       </thead>
       <tbody></tbody>
+      <tfoot>
+        <tr>
+          <td colspan="10" id="summaryFooter">—</td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 
   <script>
     const chartCtx = document.getElementById('loanChart').getContext('2d');
     let loanChart;
+    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
 
     function updateChart(data) {
       if (loanChart) loanChart.destroy();
@@ -170,10 +182,6 @@
       });
     }
 
-    const form = document.getElementById('loanForm');
-    const tableBody = document.querySelector('#summaryTable tbody');
-    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
-
     function formatDate(dateStr) {
       const d = new Date(dateStr);
       return d.toLocaleDateString('th-TH');
@@ -184,9 +192,14 @@
     }
 
     function calcSummary() {
+      const tableBody = document.querySelector('#summaryTable tbody');
       tableBody.innerHTML = '';
       const now = new Date();
       const chartData = [];
+
+      let totalPrincipal = 0;
+      let totalAccumulated = 0;
+      let totalNextMonth = 0;
 
       loans.forEach((loan, index) => {
         const totalPaid = getTotalPaid(loan);
@@ -198,6 +211,10 @@
         const nextDue = new Date(loan.startDate);
         nextDue.setMonth(nextDue.getMonth() + 1);
         const daysUntilDue = Math.floor((nextDue - now) / (1000 * 60 * 60 * 24));
+
+        totalPrincipal += netPrincipal;
+        totalAccumulated += parseFloat(accumulated);
+        totalNextMonth += parseFloat(nextMonth);
 
         const row = document.createElement('tr');
         if (daysUntilDue <= 5) {
@@ -223,6 +240,11 @@
       });
 
       updateChart(chartData);
+
+      document.getElementById('summaryFooter').innerText = 
+        `💰 เงินต้นคงเหลือรวม: ${totalPrincipal.toLocaleString()} บาท | ` +
+        `📈 ดอกเบี้ยสะสม: ${totalAccumulated.toLocaleString()} บาท | ` +
+        `🔮 ดอกเบี้ยเดือนหน้า: ${totalNextMonth.toLocaleString()} บาท`;
     }
 
     function addRepayment(index) {
@@ -306,7 +328,7 @@
       reader.readAsText(file);
     }
 
-    form.addEventListener('submit', (e) => {
+    document.getElementById('loanForm').addEventListener('submit', (e) => {
       e.preventDefault();
       const newLoan = {
         name: document.getElementById('name').value,
@@ -317,7 +339,7 @@
       };
       loans.push(newLoan);
       localStorage.setItem('loans', JSON.stringify(loans));
-      form.reset();
+      e.target.reset();
       calcSummary();
     });
 
