--- a/index.html
+++ b/index.html
@@ -45,33 +45,42 @@
     input {
       width: 100%;
       padding: 0.6rem;
-      border: 1px solid #eec8d9;
-      border-radius: 12px;
+      border: 1px solid #fbcfd9;
+      border-radius: 14px;
       margin-top: 0.3rem;
       font-size: 1rem;
       background-color: #fff0f6;
-      transition: box-shadow 0.3s;
+      transition: all 0.3s ease;
+      box-shadow: inset 0 1px 2px rgba(255, 180, 200, 0.3);
     }
     input:focus {
       outline: none;
-      box-shadow: 0 0 8px #ffb6c1;
+      box-shadow: 0 0 8px #ffaec8;
+      background-color: #ffe5ec;
     }
     button {
+      position: relative;
       margin-top: 1.5rem;
-      background-color: #ff91ae;
+      background-color: #ffb3ab;
       border: none;
       padding: 0.8rem 1.8rem;
       border-radius: 20px;
       font-weight: bold;
       cursor: pointer;
       color: #fff;
-      transition: all 0.3s ease;
+      transition: all 0.2s ease-in-out;
       font-size: 1rem;
       margin-right: 0.5rem;
+      box-shadow: 0 6px #f18d94;
     }
     button:hover {
       transform: scale(1.05);
-      background-color: #ff6e95;
+      background-color: #ffcad4;
+      box-shadow: 0 6px #f5a5ae;
+    }
+    button:active {
+      transform: translateY(4px);
+      box-shadow: 0 2px #e28a8a;
     }
     table {
       margin-top: 2rem;
